[project]
name = "voice-interview-coach"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "livekit-agents[silero,turn-detector]~=1.3",
    "livekit-plugins-noise-cancellation~=0.2",
    "python-dotenv>=1.2.2",
    "livekit-plugins-openai>=0.1.0",
    "livekit-plugins-cartesia>=0.1.0",
    "livekit-plugins-assemblyai>=0.1.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "pypdf>=3.0.0",
    "python-multipart>=0.0.6",
]
